[gd_scene load_steps=12 format=3 uid="uid://dg2hxoe16obf6"]

[ext_resource type="Script" path="res://game/game.gd" id="1_d3mtx"]
[ext_resource type="PackedScene" uid="uid://q30qn745r6jb" path="res://player/player.tscn" id="2_uwxw5"]
[ext_resource type="Texture2D" uid="uid://cgl15lxmstn5g" path="res://UI/UI.png" id="3_p316b"]
[ext_resource type="AudioStream" uid="uid://dqmrtposvu3tc" path="res://bgm/bgm.wav" id="4_41kxs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yn04j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cojo3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1wkmn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w8bko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1y5dw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jvbpn"]
atlas = ExtResource("3_p316b")
region = Rect2(484, 40, 292, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8vip"]
atlas = ExtResource("3_p316b")
region = Rect2(8, 164, 437, 194)

[node name="Game" type="Node2D"]
script = ExtResource("1_d3mtx")

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 1.0

[node name="Player" parent="." instance=ExtResource("2_uwxw5")]
position = Vector2(-8, -8)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 1.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopLeft" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelLabel" type="Label" parent="UI/TopLeft"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 85.0
offset_bottom = 34.0
text = "Level: 100"
uppercase = true

[node name="StepLabel" type="Label" parent="UI/TopLeft"]
layout_mode = 0
offset_left = 120.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 34.0
text = "Step: 9999"
uppercase = true

[node name="BottomLeft" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Instruction" type="RichTextLabel" parent="UI/BottomLeft"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -61.0
offset_right = 180.0
offset_bottom = -15.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "space or click/tap here for help"
fit_content_height = true

[node name="BottomLeft" type="Button" parent="UI/BottomLeft"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = -100.0
offset_right = 227.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_yn04j")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cojo3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1wkmn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_w8bko")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1y5dw")
flat = true
clip_text = true

[node name="HelpPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/HelpPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -180.0
offset_right = 146.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_jvbpn")

[node name="Instruction" type="RichTextLabel" parent="UI/HelpPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = 197.0
offset_right = 97.5
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "        space or click/tap 
        anywhere to hide"
fit_content_height = true

[node name="WinPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI/WinPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -97.0
offset_right = 218.5
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_l8vip")

[node name="Instruction" type="Label" parent="UI/WinPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -177.0
offset_right = 84.5
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "Press space to restart"

[node name="LevelCompletedPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/LevelCompletedPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.0
offset_top = -130.0
offset_right = -120.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
size_flags_horizontal = 4
text = "Step: 9999"
horizontal_alignment = 1

[node name="IdealStepLabel" type="Label" parent="UI/LevelCompletedPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -9.0
offset_right = 61.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "Ideal Step: 9999"
horizontal_alignment = 1

[node name="Instruction" type="Label" parent="UI/LevelCompletedPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = 80.0
offset_right = 145.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "right (d) or swipe right to proceed

left (a) or swipe left to restart level"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_41kxs")
volume_db = -20.0
autoplay = true

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="gui_input" from="UI/BottomLeft/Instruction" to="." method="_on_instruction_gui_input"]
[connection signal="pressed" from="UI/BottomLeft/BottomLeft" to="." method="_on_instruction_gui_input"]
[connection signal="gui_input" from="UI/HelpPanel" to="." method="_on_help_panel_gui_input"]
